--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+	<title>Human Performance Onboarding</title>
 	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/bodymovin/5.4.4/lottie.min.js"></script>
 	<meta name="viewport" content="width=device-width">
 </head>
@@ -15,6 +15,13 @@ body, html {
 	width:100%;
 	height:90vh;
 	cursor:pointer;
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    -webkit-tap-highlight-color: transparent;
 }
 .progress {
 	margin:auto;
@@ -28,6 +35,10 @@ body, html {
 	display:inline-block;
 	margin:0.5%;
 	cursor:pointer;
+}
+@keyframes fadeIn {
+	0% {opacity:0;};
+	100% {opacity:1;}
 }
 @media screen and (max-width:768px){
 	.progress {
@@ -118,14 +129,12 @@ element.onclick=function() {
 	} 
 }
 
-
 controls = document.querySelectorAll('.progress div');
 console.log(controls);
 
 function grey() {
 	for(i=0;i<controls.length;i++){
 		controls[i].style.backgroundColor="#CCCCCC";
-		
 	}
 }
 
